...
                  child: Container(
                    width: 180,
                    height: 50,
                    alignment: Alignment.center,
                    decoration: AppTheme.onboardingButton,
                    child: const Text(
                      "Get Started",
                      style: AppTheme.onboardingButtonText,
                    ),
                  ),
                ),
                const SizedBox(height: 80),
              ],
...
