...
                        ),
                        const SizedBox(height: 10),
                        Row(
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: [
                            Text(
                              "Already have an account?",
                              style: AppTheme.smallTextGrey,
                            ),
                            GestureDetector(
                              onTap: widget.showLoginPage,
                              child: Text(
                                " Login now.",
...
